--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="section-title-bold"> Overview </p>
     <div class="title-line"> </div> 
    
-    <p class="section-text"> During this assignment, an A/B test was conducted to analyze the results of the two different user interfaces. From the results obtained by asking users to perform a simple task, conclusions were drawn on whether the new design choices reasonably impacted the user's interaction.  </p>
+    <p class="section-text"> During this assignment, an A/B test was conducted to analyze the user interaction with two different versions of an interface. By asking users to perform a simple task in both versions of the interface, the results were analyzed and conclusions were drawn on whether the new design choices of the interface reasonably impacted the user's interaction.  </p>
    
     <div class="f"> </div>  
     <div class="section-line"> </div> 
@@ -30,7 +30,7 @@
     <div class="title-line"> </div> 
     <p class="section-text"> <strong>	•	Interface analyzed: </strong>Medical center interface, appointment section.  </p>
     <div class="m"> </div> 
-    <p class="section-text"> <strong>	•	Task performed: </strong> Schedule an appointment with Adam Ng, MD at Morristown Medical Center on April 23, 2024. </p>
+    <p class="section-text"> <strong>	•	Task performed: </strong> Appointment scheduling with Adam Ng, MD at Morristown Medical Center on April 23, 2024. </p>
     <div class="m"> </div> 
     <p class="section-text"> <strong>	•	Number of interactions: </strong>  21 per version. </p>
     <div class="m"> </div> 
@@ -51,7 +51,7 @@
     <div class="subsection-line"> </div> 
     <div class="f"> </div>  
 
-    <p class="section-subtitle"> User interfaces: </p>
+    <p class="section-subtitle"> User interface: </p>
     <div class="title-line"> </div> 
     <div class="horizontal-container">
       <div class="horizontal-box">
@@ -68,7 +68,7 @@
   <div class="f"> </div>  
   <div class="title-line"> </div> 
 
-  <p class="section-text"> <strong>	Changes made: </strong> </p>
+  <p class="section-text"> <strong>	Changes made in version B: </strong> </p>
   <div class="m"> </div>  
   <div class="  extra-margin-container"> 
     <p class="section-text"> o		Increased contrast between text, background, and buttons. </p>
@@ -92,7 +92,9 @@
 
   <p class="section-title"> Part 2: <strong> Analysis </strong> </p>
   <div class="title-line"> </div> 
-  <p class="section-text"> During this assignment, an A/B test was conducted to analyze the results of the two different UI created. From the results obtained by asking users to perform a simple task, conclusions were drawn on whether the new design choices reasonably impacted the user’s interaction.  </p>
+  <p class="section-text">  To assess both versions of the interface, 3 of the metrics collected were selected for its analysis. A statistical test was carried out for each of those metrics to determine whether the difference between the interface’s version A and B was statistically significant with regard to the user interaction.</p>
+  <div class="m"> </div>    
+  <p class="section-text">The information and results of the analysis can be found underneath: </p>
   <div class="f"> </div>    
   <div class="subsection-line"> </div> 
   <div class="f"> </div>  
@@ -113,7 +115,7 @@
   <div class="m"> </div> 
   <p class="section-text"> <strong>•	Alternative Hypothesis: </strong>Version B has a lower misclick rate compared to version A due to the UI change.  </p>
   <div class="m"> </div> 
-  <p class="section-text"> <strong>•	Rationale:</strong> In the version of the UI, the content follows a more organized structure to help the user navigate the interface efficiently and to easily understand the correct place to click, therefore the number of misclicks is expected to decrease.  </p>
+  <p class="section-text"> <strong>•	Rationale:</strong> In the version B of the interface, the content follows a more organized structure to help the user navigate the interface efficiently and to easily understand the correct place to click. Therefore, the number of misclicks is expected to decrease.  </p>
   <div class="f"> </div> 
   <div class="subsection-line"> </div> 
   <p class="section-subtitle"> Analysis: </p>
@@ -211,7 +213,7 @@
           <div class="m"> </div> 
           <p class="section-text"> <strong>•	Alternative Hypothesis: </strong>Users spend less time on version B than on version A because of the UI modification. </p>
           <div class="m"> </div> 
-          <p class="section-text"> <strong>•	Rationale:</strong> In the version B of the UI, the content is better organized and more intuitive; therefore, users can perform tasks faster, and therefore need less time in the interface. </p>
+          <p class="section-text"> <strong>•	Rationale:</strong> In the version B of the UI, the content is better organized and more intuitive; therefore, users can perform tasks faster, and need less time in the interface. </p>
           <div class="f"> </div> 
         <div class="subsection-line"> </div> 
         <p class="section-subtitle"> Analysis: </p>
@@ -284,7 +286,7 @@
   <p class="section-text"> <strong>•	Test used: </strong> Two-tailed t </p>
   <div class="m"> </div> 
   <div class="  extra-margin-container"> 
-    <p class="section-text"> <em><u>*	Why this test?</u> Since we are analyzing two independent data samples, and we are interested in understanding the different results in either direction (a time increase or decrease to the first click from version B to version A, a <strong>Two-tailed t test</strong> is the most suitable statistical analysis to study the different outputs of data. </em> </p>
+    <p class="section-text"> <em><u>*	Why this test?</u> Since we are analyzing two independent data samples, and we are interested in understanding the different results in either direction (a time increase or decrease to the first click from version B to version A), a <strong>Two-tailed t test</strong> is the most suitable statistical analysis to study the different outputs of data. </em> </p>
   </div> 
   <div class="m"> </div> 
   <p class="section-text"> <strong>•	Results: </strong> </p>
